--- a/res/layout/list_content_sticky.xml
+++ b/res/layout/list_content_sticky.xml
@@ -33,4 +33,6 @@
             android:scrollbarStyle="outsideOverlay" />
     </FrameLayout>
 
+    <include layout="@layout/include_undo_bar" />
+
 </FrameLayout>
