--- a/res/layout/include_undo_bar.xml
+++ b/res/layout/include_undo_bar.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/undobar"
     style="@style/UndoBar"
+    android:visibility="gone"
     >
 
     <TextView
