--- a/res/layout/journals_frag.xml
+++ b/res/layout/journals_frag.xml
@@ -5,17 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/frame_progress"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <include layout="@layout/include_frame_progress" />
 
-        <ProgressBar
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-    </FrameLayout>
+    <include layout="@layout/include_frame_retry" />
 
     <FrameLayout
         android:id="@+id/frame_list"
