--- a/res/layout/photos_frag.xml
+++ b/res/layout/photos_frag.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/include_frame_progress" />
+
+    <include layout="@layout/include_frame_retry" />
+
     <include layout="@layout/include_grid_view" />
 
     <LinearLayout
