--- a/res/layout/contact_frag.xml
+++ b/res/layout/contact_frag.xml
@@ -155,7 +155,7 @@
 
 
         <TextView
-            android:id="@+id/lbl_tags_frame"
+            android:id="@+id/lbl_tags_title"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
