--- a/res/layout/doc_frag.xml
+++ b/res/layout/doc_frag.xml
@@ -2,25 +2,22 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/scrollableFrame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <TextView
             android:id="@+id/lbl_title"
             style="@style/listTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/title" />
-
-        <LinearLayout
-            android:id="@+id/attachments_frame"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:hint="@string/title"
+            />
 
         <TextView
             android:id="@+id/lbl_note"
@@ -29,14 +26,31 @@
             android:layout_height="wrap_content"
             android:hint="@string/doc"
             android:autoLink="all"
-            android:minLines="8" />
+            android:minLines="8"
+            />
 
         <TextView
-            android:id="@+id/lbl_tags_frame"
+            android:id="@+id/lbl_attachment"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/tags" />
+            android:text="@string/attachments"
+            />
+
+        <LinearLayout
+            android:id="@+id/frame_attachment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            />
+
+        <TextView
+            android:id="@+id/lbl_tags_title"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/tags"
+            />
 
         <TextView
             android:id="@+id/lbl_tags"
@@ -44,7 +58,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autoLink="all"
-            android:hint="@string/tags" />
+            android:hint="@string/tags"
+            />
     </LinearLayout>
 
 </ScrollView>
