--- a/res/layout/event_frag.xml
+++ b/res/layout/event_frag.xml
@@ -40,7 +40,7 @@
             android:hint="@string/location" />
 
         <TextView
-            android:id="@+id/lbl_tags_frame"
+            android:id="@+id/lbl_tags_title"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
