--- a/res/layout/journals_frag.xml
+++ b/res/layout/journals_frag.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         android:visibility="gone">
 
-        <android.support.v4.view.ViewPager
+        <com.nexuspad.ui.view.EndlessViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
