--- a/res/layout/journals_month_activity.xml
+++ b/res/layout/journals_month_activity.xml
@@ -6,7 +6,7 @@
     >
 
     <CalendarView
-        android:id="@+id/calendar_picker"
+        android:id="@+id/calendar_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
