--- a/res/layout/about_frag.xml
+++ b/res/layout/about_frag.xml
@@ -11,12 +11,22 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/ed__padding_medium"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/np_banner" />
+            android:layout_margin="4dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/ic_ab" />
+            <TextView
+                style="@style/stylePrimaryTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/account_settings" />
+        </LinearLayout>
 
         <TextView
             style="?android:attr/listSeparatorTextViewStyle"
@@ -36,7 +46,7 @@
                 android:layout_margin="@dimen/ed__padding_small"
                 android:contentDescription="@string/porfile_image"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/avatar" />
 
             <LinearLayout
                 android:layout_width="match_parent"
