--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -6,10 +6,10 @@
         <item name="android:textColorPrimary">?android:textColorPrimaryInverse</item>
     </style>
 
-    <style name="Transparent" parent="@android:style/Theme.Holo">
-        <item name="android:windowNoTitle">true</item>
+    <style name="PhotoActivity" parent="@android:style/Theme.Holo">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowActionBarOverlay">true</item>
     </style>
 
     <style name="autoMargin" />
